# RoboGym

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README  file_renamer.py  simulator.py
c++/: CMakeLists.txt  compile.cpp
configs/: darwin.py  pr2.py  sawyer.py
mujoco_models/darwin/: darwin.urdf  darwin_generated.xml
mujoco_models/environment/: VHACD_CHs.wrl  frame.STL  frame.off  frame_conv.stl  frame_log.txt  part_of_frame.stl  tray.STL
mujoco_models/pr2/: pr2_legofree_position.xml
mujoco_models/sawyer/: sawyer.urdf  sawyer.xml  sawyer_allvisible.xml
paramsettings/: pr2.py  sawyer.py
utils/convex_decomposition/: blender_export_all_separte.py  blender_export_all_separte_stl.py
utils/convex_decomposition/v-hacd/: Dockerfile  startdocker
